Added EatingList Database

--- a/asparagus/appsettings.json
+++ b/asparagus/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-asparagus-14E20B3C-3815-4894-92A0-5E52F65A9941;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-asparagus-14E20B3C-3815-4894-92A0-5E52F65A9941;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "EatingListDbContext": "Server=(localdb)\\mssqllocaldb;Database=EatingListContext;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "asparagusContext": "Server=(localdb)\\mssqllocaldb;Database=asparagusContext-13cd82b8-d12e-4ba3-9792-58aed5ad1177;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
